fix(backend): Dockerfile fixed

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -10,7 +10,7 @@ RUN docker-php-ext-install pdo pdo_mysql
 ENV APACHE_DOCUMENT_ROOT /var/www/html/public
 
 ENV COMPOSER_ALLOW_SUPERUSER=1
-ENV COMPOSER_NO_DEV=0=0
+ENV COMPOSER_NO_DEV=0
 
 RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf
 RUN sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
