feat: :sparkles: add jwt authentication

--- a/Backend/config/packages/api_platform.yaml
+++ b/Backend/config/packages/api_platform.yaml
@@ -16,3 +16,8 @@ api_platform:
             rfc_7807_compliant_errors: true
     keep_legacy_inflector: false
     use_symfony_listeners: true
+    swagger:
+         api_keys:
+             JWT:
+                name: Authorization
+                type: header
