--- a/Backend/config/routes.yaml
+++ b/Backend/config/routes.yaml
@@ -3,3 +3,6 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+login_route:
+    path: /api/login
+    methods: ['POST']
