--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -31,8 +31,7 @@
         "symfony/serializer": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
         "symfony/validator": "7.1.*",
-        "symfony/yaml": "7.1.*",
-        "symfonycasts/reset-password-bundle": "^1.22"
+        "symfony/yaml": "7.1.*"
     },
     "config": {
         "allow-plugins": {
