--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -23,6 +23,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.1.*",
         "symfony/http-client": "7.1.*",
+        "symfony/mailer": "7.1.*",
         "symfony/mailgun-mailer": "7.1.*",
         "symfony/property-access": "7.1.*",
         "symfony/property-info": "7.1.*",
