feat: :sparkles: add env APP_TIMEZONE

--- a/Backend/.env
+++ b/Backend/.env
@@ -17,6 +17,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=308df6b27e2a857d0fa583cbe02ad426
+APP_TIMEZONE=America/Argentina/Buenos_Aires
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
