--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.25.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
